test: postService 테스트 보충